tests/positive/eval_order_return.ax
module eval_order_return;

fn next(state: *mut i32, expected: i32) -> i32 {
    if *state != expected {
        return 100;
    }
    *state = *state + 1;
    return expected;
}

fn total(state: *mut i32) -> i32 {
    return next(state, 0) + next(state, 1);
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    var state: i32 = 0;
    let value: i32 = total(&state);
    return state + value - 3;
}
